<resources>
    <string name="app_name">Student App</string>
    <string name="title_students">Students</string>
    <string name="title_add">Add Student</string>
    <string name="title_profile">Profile</string>
    <string name="soon">SOON</string>
    <string name="nama">Nama</string>
    <string name="nim">NIM</string>
    <string name="profile">Profile</string>
    <string name="profile_nama">Nama : %s</string>
    <string name="profile_nim">NIM : %s</string>
    <string name="profile_email">Email : %s</string>
    <string name="profile_angkatan">Angkatan : %s</string>
    <string name="profile_fakultas">Fakultas : %s</string>
    <string name="profile_program">Program Studi : %s</string>
    <string name="profile_semester">Semester Terdaftar : %d</string>
    <string name="profile_status">Status : %s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="student_details">Student Details</string>
</resources>